# point-of-sales

./: .gitignore  README.md  devenv.nix  pyproject.toml
src/: main.py
src/pos/: card.py  order.py  payment.py  processor.py  settings.py
src/tests/: test_line_item.py  test_order.py  test_payment.py  test_processor.py
